# langflow_examples

./: .env_example  README.md  docker-compose.yaml  pyproject.toml
docker/: components.Dockerfile  docker-compose.yaml
flow_examples/: Basic Prompting Gigachat.json  Simple Agent GigaChat.json  Vector store Giga + Chroma.json
gigachat/: gigachat_chat_model.py
gigachat_components/: gigachat_chat_model.py  gigachat_embeddings.py
lfx_examples/: request_to_flow.py  simple_agent_openai.py  simple_gigachat_flow.py
lfx_examples/gigachat_components_lfx/: __init__.py  gigachat_chat_model.py
